[gd_scene load_steps=2 format=3 uid="uid://bfh1n5ce2fu8q"]

[ext_resource type="Script" path="res://Scenes/UI/starting_menu.gd" id="1_g4s37"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_g4s37")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 175.0
grow_vertical = 2
color = Color(0.589096, 0.589096, 0.589096, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -73.5
offset_right = 120.0
offset_bottom = 73.5
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "EGO"
horizontal_alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Lodout" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LODOUT"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Lodout" to="." method="_on_lodout_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
